Refactoring TransportSimulateBulkAction to not extend TransportBulkAction